okcashpro.github.io/okcash.org

--- a/dev-start.html
+++ b/dev-start.html
@@ -21,16 +21,16 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://okcash.org/">
+    <meta property="og:url" content="https://okcashpro.github.io/okcash.org/">
     <meta property="og:title" content="Dev Start - The leading Multichain, Open Source Digital Cash - OK Token">
     <meta property="og:description" content="OK Okcash | Multi-Chain Digital Currency | Secure, Fast, and Sustainable Payments Across Leading Blockchains. The Future of Decentralized Social Payments.">
-    <meta property="og:image" content="https://okcash.org/img/ok-site.png">
+    <meta property="og:image" content="https://okcashpro.github.io/okcash.org/img/ok-site.png">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Dev Start - The Leading Multichain, Open Source Digital Cash - OK Token">
     <meta name="twitter:description" content="OK Okcash | Multi-Chain Digital Currency | Secure, Fast, and Sustainable Payments Across Leading Blockchains. The Future of Decentralized Social Payments.">
-    <meta name="twitter:image" content="https://okcash.org/img/ok-site.png">
+    <meta name="twitter:image" content="https://okcashpro.github.io/okcash.org/img/ok-site.png">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="/favicon.png">
