--- a/how-it-works.html
+++ b/how-it-works.html
@@ -202,7 +202,7 @@
                                                         <a href="https://app.uniswap.org/swap?outputCurrency=0xd3Ac016b1B8C80EeAdDe4D186A9138C9324e4189&inputCurrency=eth" class="mil-blog-card-sm mil-c-gone" target="_blank">
                                                             <div class="mil-cover">
                                                                 <div class="mil-hover-frame">
-                                                                    <img src="/img/blog/9.png" alt="cover">
+                                                                    <img src="./img/blog/9.png" alt="cover">
                                                                 </div>
                                                             </div>
                                                             <div class="mil-text-frame">
@@ -255,7 +255,7 @@
                             <p style="text-align: justify;">Welcome to the OK Universe! 🌌 As a new adventurer, you can <a href="/getting-started.html" class="mil-a1">get started</a> with OK without needing a PhD in crypto. 🧙‍♂️ Just install a Web3 wallet like MetaMask, Trust Wallet, or Coinbase Wallet on your computer, mobile phone, or even your smart fridge (why not?). 📱 Your wallet will generate your first OK address, and you can create more whenever you like—collect them all! 🏆
                                 <br><br>
                                 Share your addresses with friends or customers so they can send you OK tokens, or you can send some their way. It's like email, but with digital gold! 💌 Just remember, for maximum privacy, it's best to use each OK address only once—stay mysterious! 🕵️‍♂️</p><br><br>
-                            <p style="text-align: center;"><img src="/img/schematic.png" alt="Okcash Overview Diagram" /></p><br><br>
+                            <p style="text-align: center;"><img src="./img/schematic.png" alt="Okcash Overview Diagram" /></p><br><br>
                             
                             <h2 id="balances" style="text-align: justify;">💰 Balances—Master the Multichain Ledger! 🌐</h2><br>
                             <p style="text-align: justify;">The OK Network operates on a shared public ledger spread across multiple blockchains—think of it as the ultimate crypto symphony! 🎶 All confirmed transactions are recorded on these chains, allowing your OK wallets to calculate spendable balances and verify that new transactions are legit. 💎
