--- a/you-need-to-know.html
+++ b/you-need-to-know.html
@@ -202,7 +202,7 @@
                                                         <a href="https://app.uniswap.org/swap?outputCurrency=0xd3Ac016b1B8C80EeAdDe4D186A9138C9324e4189&inputCurrency=eth" class="mil-blog-card-sm mil-c-gone" target="_blank">
                                                             <div class="mil-cover">
                                                                 <div class="mil-hover-frame">
-                                                                    <img src="/img/blog/9.png" alt="cover">
+                                                                    <img src="./img/blog/9.png" alt="cover">
                                                                 </div>
                                                             </div>
                                                             <div class="mil-text-frame">
