--- a/innovation.html
+++ b/innovation.html
@@ -8,13 +8,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- grid css -->
-    <link rel="stylesheet" href="/css/plugins/bootstrap-grid.css">
+    <link rel="stylesheet" href="./css/plugins/bootstrap-grid.css">
     <!-- font awesome css -->
-    <link rel="stylesheet" href="/css/plugins/fontawesome.min.css">
+    <link rel="stylesheet" href="./css/plugins/fontawesome.min.css">
     <!-- swiper css -->
-    <link rel="stylesheet" href="/css/plugins/swiper.min.css">
+    <link rel="stylesheet" href="./css/plugins/swiper.min.css">
     <!-- okai css -->
-    <link rel="stylesheet" href="/css/style-stylish.css">
+    <link rel="stylesheet" href="./css/style-stylish.css">
     <!-- page title -->
     <title>Innovation - The Leading Multichain, Open Source Digital Cash - OK Token</title>
     <meta name="description" content="OK Okcash | Multi-Chain Digital Currency | Secure, Fast, and Sustainable Payments Across Leading Blockchains. The Future of Decentralized Social Payments.">
@@ -390,22 +390,22 @@
     <!-- wrapper end -->
 
     <!-- swup js -->
-    <script src="/js/plugins/swup.min.js"></script>
+    <script src="./js/plugins/swup.min.js"></script>
     <!-- gsap js -->
-    <script src="/js/plugins/gsap.min.js"></script>
+    <script src="./js/plugins/gsap.min.js"></script>
     <!-- scroll smoother -->
-    <script src="/js/plugins/ScrollSmoother.min.js"></script>
+    <script src="./js/plugins/ScrollSmoother.min.js"></script>
     <!-- scroll trigger js -->
-    <script src="/js/plugins/ScrollTrigger.min.js"></script>
+    <script src="./js/plugins/ScrollTrigger.min.js"></script>
     <!-- scroll to js -->
-    <script src="/js/plugins/ScrollTo.min.js"></script>
+    <script src="./js/plugins/ScrollTo.min.js"></script>
     <!-- swiper js -->
-    <script src="/js/plugins/swiper.min.js"></script>
+    <script src="./js/plugins/swiper.min.js"></script>
     <!-- parallax js -->
-    <script src="/js/plugins/parallax.js"></script>
+    <script src="./js/plugins/parallax.js"></script>
 
     <!-- pixy js -->
-    <script src="/js/main.js"></script>
+    <script src="./js/main.js"></script>
 
 </body>
 
