--- a/getting-started.html
+++ b/getting-started.html
@@ -33,7 +33,7 @@
     <meta name="twitter:image" content="https://okcashpro.github.io/okcash.org/img/ok-site.png">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="icon" type="image/png" href="./favicon.png">
 <script defer data-project="6776bcdbe9f1d799b2ea485b" src="https://cdn.jsdelivr.net/gh/litlyx/litlyx-js/browser/litlyx.js"></script>
  
     <script>
@@ -86,8 +86,8 @@
             <div class="mil-top-panel-2">
                 <div class="container">
                     <div class="mil-left-side mil-tp-transition" id="swupTpLeft">
-                        <a href="/index.html" class="mil-logo mil-scroll-to" data-no-swup>
-                            <img src="/ok-logo.png" alt="Chain" height="33" class="rounded-circle me-2"> <!-- <i class="far fa-cube"></i> -->
+                        <a href="./index.html" class="mil-logo mil-scroll-to" data-no-swup>
+                            <img src="./ok-logo.png" alt="Chain" height="33" class="rounded-circle me-2"> <!-- <i class="far fa-cube"></i> -->
                             <span>Okcash</span>
                         </a>
                     </div>
@@ -95,19 +95,19 @@
                     <div class="mil-onepage-nav">
                         <ul>
                             <strong> 
-                                <a href="/okcash-for-individuals.html" class="mil-text-link mil-a2 mil-c-gone">Individuals</a> | 
-                                <a href="/okcash-for-businesses.html" class="mil-text-link mil-a2 mil-c-gone">Businesses</a> | 
-                                <a href="/okcash-for-developers.html" class="mil-text-link mil-a2 mil-c-gone">Developers</a> | 
-                                <a href="/getting-started.html" class="mil-text-link mil-a2 mil-c-gone">Getting Started</a> | 
-                                <a href="/how-it-works.html" class="mil-text-link mil-a2 mil-c-gone">How It Works</a> | 
-                                <a href="/you-need-to-know.html" class="mil-text-link mil-a2 mil-c-gone">You Need to Know</a> | 
-                                <a href="/innovation.html" class="mil-text-link mil-a2 mil-c-gone">Innovation</a> | 
-                                <a href="/collaborators.html" class="mil-text-link mil-a2 mil-c-gone">Collaborators</a> | 
-                                <a href="/secure-your-wallet.html" class="mil-text-link mil-a2 mil-c-gone">Security</a> | 
-                                <a href="/protect-your-privacy.html" class="mil-text-link mil-a2 mil-c-gone">Privacy</a> | 
-                                <a href="/developer-documentation.html" class="mil-text-link mil-a2 mil-c-gone">Documentation</a> | 
-                                <a href="/dev-start.html" class="mil-text-link mil-a2 mil-c-gone">Dev Start</a> | 
-                                <a href="/crypto-glossary.html" class="mil-text-link mil-a2 mil-c-gone">Crypto Glossary</a> | 
+                                <a href="./okcash-for-individuals.html" class="mil-text-link mil-a2 mil-c-gone">Individuals</a> | 
+                                <a href="./okcash-for-businesses.html" class="mil-text-link mil-a2 mil-c-gone">Businesses</a> | 
+                                <a href="./okcash-for-developers.html" class="mil-text-link mil-a2 mil-c-gone">Developers</a> | 
+                                <a href="./getting-started.html" class="mil-text-link mil-a2 mil-c-gone">Getting Started</a> | 
+                                <a href="./how-it-works.html" class="mil-text-link mil-a2 mil-c-gone">How It Works</a> | 
+                                <a href="./you-need-to-know.html" class="mil-text-link mil-a2 mil-c-gone">You Need to Know</a> | 
+                                <a href="./innovation.html" class="mil-text-link mil-a2 mil-c-gone">Innovation</a> | 
+                                <a href="./collaborators.html" class="mil-text-link mil-a2 mil-c-gone">Collaborators</a> | 
+                                <a href="./secure-your-wallet.html" class="mil-text-link mil-a2 mil-c-gone">Security</a> | 
+                                <a href="./protect-your-privacy.html" class="mil-text-link mil-a2 mil-c-gone">Privacy</a> | 
+                                <a href="./developer-documentation.html" class="mil-text-link mil-a2 mil-c-gone">Documentation</a> | 
+                                <a href="./dev-start.html" class="mil-text-link mil-a2 mil-c-gone">Dev Start</a> | 
+                                <a href="./crypto-glossary.html" class="mil-text-link mil-a2 mil-c-gone">Crypto Glossary</a> | 
                                 <a href="https://okcash.network" class="mil-text-link mil-a2 mil-c-gone" target="_blank">OK Multichain Explorer</a> | 
                                 <a href="https://okcash.network/index.html#exchanges" class="mil-text-link mil-a2 mil-c-gone" target="_blank">Exchanges</a> | 
                                 <a href="https://okcash.network/index.html#staking" class="mil-text-link mil-a2 mil-c-gone">Staking</a> | 
@@ -138,21 +138,21 @@
                                     <div class="mil-menu-part mil-inner-scroll" id="swupMenu">
                                         <ul class="mil-main-menu mil-c-gone">
                                             <li>
-                                                <a href="/index.html">Home</a>
+                                                <a href="./index.html">Home</a>
                                             </li>
                                             <li class="mil-has-children">
                                                 <a href="#.">Introduction</a>
                                                 <ul>
-                                                    <li><a href="/okcash-for-individuals.html" data-no-swup>Individuals</a></li>
-                                                    <li><a href="/okcash-for-businesses.html" data-no-swup>Businesses</a></li>
-                                                    <li><a href="/okcash-for-developers.html" data-no-swup>Developers</a></li>
-                                                    <li><a href="/getting-started.html" data-no-swup>Getting Started</a></li>
-                                                    <li><a href="/how-it-works.html" data-no-swup>How it works</a></li>
-                                                    <li><a href="/you-need-to-know.html" data-no-swup>You need to know</a></li>
+                                                    <li><a href="./okcash-for-individuals.html" data-no-swup>Individuals</a></li>
+                                                    <li><a href="./okcash-for-businesses.html" data-no-swup>Businesses</a></li>
+                                                    <li><a href="./okcash-for-developers.html" data-no-swup>Developers</a></li>
+                                                    <li><a href="./getting-started.html" data-no-swup>Getting Started</a></li>
+                                                    <li><a href="./how-it-works.html" data-no-swup>How it works</a></li>
+                                                    <li><a href="./you-need-to-know.html" data-no-swup>You need to know</a></li>
                                                 </ul>
                                             </li>
                                             <li>
-                                                <a href="/index.html#partners">Partners</a>
+                                                <a href="./index.html#partners">Partners</a>
                                             </li>
                                             <li class="mil-has-children">
                                                 <a href="#.">Resources</a>
@@ -160,17 +160,17 @@
                                                     <li><a href="https://okcash.network" target="_blank">OK Multichain Explorer</a></li>
                                                     <li><a href="https://okcash.network/index.html#exchanges" target="_blank">Exchanges</a></li>
                                                     <li><a href="https://okcash.network/index.html#staking" target="_blank">Staking</a></li>
-                                                    <li><a href="/collaborators.html">Collaborators</a></li>
-                                                    <li><a href="/developer-documentation.html">Documentation</a></li>
+                                                    <li><a href="./collaborators.html">Collaborators</a></li>
+                                                    <li><a href="./developer-documentation.html">Documentation</a></li>
                                                     <li><a href="https://okcash.network" target="_blank">Branding Kit</a></li>
                                                     <li><a href="https://github.com/okcashpro/okcash" target="_blank">Github</a></li>
                                                 </ul>
                                             </li>
                                             <li>
-                                                <a href="/innovation.html">Innovation</a>
+                                                <a href="./innovation.html">Innovation</a>
                                             </li>
                                             <li>
-                                                <a href="/faq.html">FAQ</a>
+                                                <a href="./faq.html">FAQ</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -244,7 +244,7 @@
                     <div class="mil-hero-1 mil-sm-hero mil-stl mil-up" id="top"><p>.</p><p>.</p><p>.</p><p>.</p><p>.</p><p>.</p>
                         <ul class="mil-breadcrumbs mil-mb60 mil-c-gone">
                             <li>
-                                <a href="/index.html">Home</a>
+                                <a href="./index.html">Home</a>
                             </li>
                             <li>
                                 <a href="#.">Getting Started with OK</a>
@@ -264,7 +264,7 @@
                                             <td style="text-align: justify;" valign="top" width="47%">
                                                 <div>
                                                     <h3 id="inform">1️⃣ Level Up Your Knowledge—Inform Yourself! 📚</h3><br>
-                                                    <p>Before you embark on your OK journey, it's essential to equip yourself with the basics of blockchain and multichain technology. 🧠 Learn how OK integrates with popular blockchain networks to bring you a reliable, decentralized, and empowering experience. Knowledge is power—get ready to unleash yours! 💡 <a href="/you-need-to-know.html" class="mil-text-link mil-a2 mil-c-gone">Read more</a></p>
+                                                    <p>Before you embark on your OK journey, it's essential to equip yourself with the basics of blockchain and multichain technology. 🧠 Learn how OK integrates with popular blockchain networks to bring you a reliable, decentralized, and empowering experience. Knowledge is power—get ready to unleash yours! 💡 <a href="./you-need-to-know.html" class="mil-text-link mil-a2 mil-c-gone">Read more</a></p>
                                                 </div>
                                                 <br><br>
                                                 <div>
@@ -338,7 +338,7 @@
                                             <td style="text-align: justify;" valign="top" width="47%">
                                                 <div>
                                                     <h3 id="merchant-inform">1️⃣ Get in the Know—Inform Yourself! 📖</h3><br>
-                                                    <p>Accepting OK is easier than you think! 🤓 No need for drastic changes to your business processes. But it's important to understand the fundamentals of cryptocurrency payments. Empower your business with the future of finance! 💼</p><a href="/you-need-to-know.html" class="mil-text-link mil-a2 mil-c-gone">Read more</a>
+                                                    <p>Accepting OK is easier than you think! 🤓 No need for drastic changes to your business processes. But it's important to understand the fundamentals of cryptocurrency payments. Empower your business with the future of finance! 💼</p><a href="./you-need-to-know.html" class="mil-text-link mil-a2 mil-c-gone">Read more</a>
                                                 </div><br><br>
                         
                                                 <div>
@@ -400,7 +400,7 @@
                                             <li><a href="https://okcash.network" class="mil-c-gone" target="_blank">Explorers</a></li>
                                             <li><a href="https://okcash.network/index.html#wallets" class="mil-c-gone" target="_blank">Wallets</a></li>
                                             <li><a href="https://github.com/okcashpro/ok-graphics" class="mil-c-gone" target="_blank">Branding Kit</a></li>
-                                            <li><a href="/developer-documentation.html" class="mil-c-gone">Documentation</a></li>
+                                            <li><a href="./developer-documentation.html" class="mil-c-gone">Documentation</a></li>
                                             <li><a href="https://okcash.news" class="mil-c-gone" target="_blank">News</a></li>
                                             <li><a href="https://bitcointalk.org/index.php?topic=1028368.0" class="mil-c-gone" target="_blank">BitcoinTalk</a></li>
                                         </ul>
