--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <meta name="twitter:image" content="https://okcashpro.github.io/okcash.org/img/ok-site.png">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="icon" type="image/png" href="./favicon.png">
 <script defer data-project="6776bcdbe9f1d799b2ea485b" src="https://cdn.jsdelivr.net/gh/litlyx/litlyx-js/browser/litlyx.js"></script>
  
     <script>
@@ -84,8 +84,8 @@
             <div class="mil-top-panel-2">
                 <div class="container">
                     <div class="mil-left-side mil-tp-transition" id="swupTpLeft">
-                        <a href="/index.html" class="mil-logo mil-scroll-to" data-no-swup>
-                            <img src="/ok-logo.png" alt="Chain" height="33" class="rounded-circle me-2"> <!-- <i class="far fa-cube"></i> -->
+                        <a href="./index.html" class="mil-logo mil-scroll-to" data-no-swup>
+                            <img src="./ok-logo.png" alt="Chain" height="33" class="rounded-circle me-2"> <!-- <i class="far fa-cube"></i> -->
                             <span>Okcash</span>
                         </a>
                     </div>
@@ -96,7 +96,7 @@
                             <li><a href="#partners" class="mil-scroll-to" data-no-swup>Partners</a></li>
                             <li><a href="#info" class="mil-scroll-to" data-no-swup>Resources</a></li>
 
-                            <li><a href="/faq.html" class="mil-scroll-to" data-no-swup>FAQ</a></li>
+                            <li><a href="./faq.html" class="mil-scroll-to" data-no-swup>FAQ</a></li>
                             <li><a href="#tldr" class="mil-scroll-to" data-no-swup>TLDR</a></li>
                             <li><a href="https://okcashpro.github.io/okai/" class="mil-scroll-to" target="_blank" data-no-swup>OKai</a></li>
                         </ul>
@@ -122,17 +122,17 @@
                                     <div class="mil-menu-part mil-inner-scroll" id="swupMenu">
                                         <ul class="mil-main-menu mil-c-gone">
                                             <li>
-                                                <a href="/index.html">Home</a>
+                                                <a href="./index.html">Home</a>
                                             </li>
                                             <li class="mil-has-children">
                                                 <a href="#.">Introduction</a>
                                                 <ul>
-                                                    <li><a href="/okcash-for-individuals.html" data-no-swup>Individuals</a></li>
-                                                    <li><a href="/okcash-for-businesses.html" data-no-swup>Businesses</a></li>
-                                                    <li><a href="/okcash-for-developers.html" data-no-swup>Developers</a></li>
-                                                    <li><a href="/getting-started.html" data-no-swup>Getting Started</a></li>
-                                                    <li><a href="/how-it-works.html" data-no-swup>How it works</a></li>
-                                                    <li><a href="/you-need-to-know.html" data-no-swup>You need to know</a></li>
+                                                    <li><a href="./okcash-for-individuals.html" data-no-swup>Individuals</a></li>
+                                                    <li><a href="./okcash-for-businesses.html" data-no-swup>Businesses</a></li>
+                                                    <li><a href="./okcash-for-developers.html" data-no-swup>Developers</a></li>
+                                                    <li><a href="./getting-started.html" data-no-swup>Getting Started</a></li>
+                                                    <li><a href="./how-it-works.html" data-no-swup>How it works</a></li>
+                                                    <li><a href="./you-need-to-know.html" data-no-swup>You need to know</a></li>
                                                 </ul>
                                             </li>
                                             <li>
@@ -144,16 +144,16 @@
                                                     <li><a href="https://okcash.network" target="_blank">OK Multichain Explorer</a></li>
                                                     <li><a href="https://okcash.network/index.html#exchanges" target="_blank">Exchanges</a></li>
                                                     <li><a href="https://okcash.network/index.html#staking" target="_blank">Staking</a></li>
-                                                    <li><a href="/collaborators.html">Collaborators</a></li>
-                                                    <li><a href="/developer-documentation.html">Documentation</a></li>
+                                                    <li><a href="./collaborators.html">Collaborators</a></li>
+                                                    <li><a href="./developer-documentation.html">Documentation</a></li>
                                                     <li><a href="https://okcash.network" target="_blank">Branding Kit</a></li>
                                                 </ul>
                                             </li>
                                             <li>
-                                                <a href="/innovation.html">Innovation</a>
+                                                <a href="./innovation.html">Innovation</a>
                                             </li>
                                             <li>
-                                                <a href="/faq.html">FAQ</a>
+                                                <a href="./faq.html">FAQ</a>
                                             </li>
                                             <li>
                                                 <a href="#tldr">TLDR</a>
@@ -745,19 +745,19 @@
                                                 <h3 class="mil-head3 mil-mb30 mil-up">Embark on Your OK Journey • Start Here!</h3>
                                                 <p class="mil-text-md mil-shortened mil-deco-text mil-max-3row-text mil-up">
                                                     <strong> Introduction: <br>
-                                                        <a href="/okcash-for-individuals.html" class="mil-text-link mil-a2 mil-c-gone">Individuals</a> | 
-                                                        <a href="/okcash-for-businesses.html" class="mil-text-link mil-a2 mil-c-gone">Businesses</a> | 
-                                                        <a href="/okcash-for-developers.html" class="mil-text-link mil-a2 mil-c-gone">Developers</a> | 
-                                                        <a href="/getting-started.html" class="mil-text-link mil-a2 mil-c-gone">Getting Started</a> | 
-                                                        <a href="/how-it-works.html" class="mil-text-link mil-a2 mil-c-gone">How It Works</a> | 
-                                                        <a href="/you-need-to-know.html" class="mil-text-link mil-a2 mil-c-gone">You Need to Know</a> | 
-                                                        <a href="/innovation.html" class="mil-text-link mil-a2 mil-c-gone">Innovation</a> | 
-                                                        <a href="/collaborators.html" class="mil-text-link mil-a2 mil-c-gone">Collaborators</a> | 
-                                                        <a href="/secure-your-wallet.html" class="mil-text-link mil-a2 mil-c-gone">Security</a> | 
-                                                        <a href="/protect-your-privacy.html" class="mil-text-link mil-a2 mil-c-gone">Privacy</a> | 
-                                                        <a href="/developer-documentation.html" class="mil-text-link mil-a2 mil-c-gone">Documentation</a> | 
-                                                        <a href="/dev-start.html" class="mil-text-link mil-a2 mil-c-gone">Dev Start</a> | 
-                                                        <a href="/crypto-glossary.html" class="mil-text-link mil-a2 mil-c-gone">Crypto Glossary</a> 
+                                                        <a href="./okcash-for-individuals.html" class="mil-text-link mil-a2 mil-c-gone">Individuals</a> | 
+                                                        <a href="./okcash-for-businesses.html" class="mil-text-link mil-a2 mil-c-gone">Businesses</a> | 
+                                                        <a href="./okcash-for-developers.html" class="mil-text-link mil-a2 mil-c-gone">Developers</a> | 
+                                                        <a href="./getting-started.html" class="mil-text-link mil-a2 mil-c-gone">Getting Started</a> | 
+                                                        <a href="./how-it-works.html" class="mil-text-link mil-a2 mil-c-gone">How It Works</a> | 
+                                                        <a href="./you-need-to-know.html" class="mil-text-link mil-a2 mil-c-gone">You Need to Know</a> | 
+                                                        <a href="./innovation.html" class="mil-text-link mil-a2 mil-c-gone">Innovation</a> | 
+                                                        <a href="./collaborators.html" class="mil-text-link mil-a2 mil-c-gone">Collaborators</a> | 
+                                                        <a href="./secure-your-wallet.html" class="mil-text-link mil-a2 mil-c-gone">Security</a> | 
+                                                        <a href="./protect-your-privacy.html" class="mil-text-link mil-a2 mil-c-gone">Privacy</a> | 
+                                                        <a href="./developer-documentation.html" class="mil-text-link mil-a2 mil-c-gone">Documentation</a> | 
+                                                        <a href="./dev-start.html" class="mil-text-link mil-a2 mil-c-gone">Dev Start</a> | 
+                                                        <a href="./crypto-glossary.html" class="mil-text-link mil-a2 mil-c-gone">Crypto Glossary</a> 
                                                     </strong></p>
                                             </div>
                                         </li>
@@ -867,7 +867,7 @@
                                             <li><a href="https://okcash.network" class="mil-c-gone" target="_blank">Explorers</a></li>
                                             <li><a href="https://okcash.network/index.html#wallets" class="mil-c-gone" target="_blank">Wallets</a></li>
                                             <li><a href="https://github.com/okcashpro/ok-graphics" class="mil-c-gone" target="_blank">Branding Kit</a></li>
-                                            <li><a href="/developer-documentation.html" class="mil-c-gone">Documentation</a></li>
+                                            <li><a href="./developer-documentation.html" class="mil-c-gone">Documentation</a></li>
                                             <li><a href="https://okcash.news" class="mil-c-gone" target="_blank">News</a></li>
                                             <li><a href="https://bitcointalk.org/index.php?topic=1028368.0" class="mil-c-gone" target="_blank">BitcoinTalk</a></li>
                                         </ul>
